# mfc-stats-b

./: .gitignore  LICENSE  README.md  pyproject.toml
assignment/: filters.py  models.py  report.html  report.ipynb  utils.py
assignment/scripts/: ballistic_box.py  ballistic_fit.py  ballistic_likelihood.py  ballistic_model.py  resonator_box.py  resonator_likelihood.py
exercises/: exercise-1.py  exercise-2.py  exercise-3.py
