[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assignment", "exercises"]

[project]
name = "stats-b"
version = "2024.0"
description="""Exercises and final report for Part B of the MFC CDT Probability and Statistics course."""
license = "MIT"
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" },
]
dependencies = [
    "matplotlib",
    "numpy",
]
